@@ -1,3 +1,9 @@
+IndexOutOfBoundsException sollte ins Murmel typsystem integriert werden, ggf. bestehende primitives umbauen?
+sbcl: (SCHAR "123" 4)
+-> SB-INT:INVALID-ARRAY-INDEX-ERROR, TYPE-ERROR, ERROR, SERIOUS-CONDITION, CONDITION,
+
+sollten requireString/ requireStringOrNull/ requireCharSequence auch character/ symbol akzeptieren?
+
 
 ggf. eine warning ausgeben, wenn lambdalist oder letXX ein global shadowed?
 -> weil da ist Murmel anders als CL: CL macht ein dynamic rebind
