@@ -9,7 +9,8 @@ Changes in JMurmel-1.4 relative to JMurmel-1.3.1
  * added the special form "try" and the function "typep"
  * added condition types, the global variable *condition-handler* and some condition handling
 
- * mlib: added the functions parse, parse-integer, min, max
+ * mlib: added the functions parse, parse-integer, min, max,
+   string-split, string-join
 
 
 Changes in JMurmel-1.3.1 relative to JMurmel-1.3
